<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UserInfoSettingActivity"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_info_setting_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rectangle"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Info"
                android:textAppearance="@style/info_text"
                android:fontFamily="@font/hanuman_light"
                />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textAppearance="@style/info_input"
                android:fontFamily="@font/hanuman_regular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="E-mail (ID)"
                android:textAppearance="@style/info_text"
                android:fontFamily="@font/hanuman_light"
                />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_id"
                android:textAppearance="@style/info_input"
                android:fontFamily="@font/hanuman_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textAppearance="@style/info_text"
                android:fontFamily="@font/hanuman_light"
                />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:textAppearance="@style/info_input"
                android:fontFamily="@font/hanuman_regular"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_info_setting_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rectangle"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pet Info"
                android:textAppearance="@style/info_text"
                android:fontFamily="@font/hanuman_regular"

                />

            <EditText
                android:id="@+id/pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pet_name"
                android:textAppearance="@style/info_input"
                android:fontFamily="@font/hanuman_regular"
                />

            <EditText
                android:id="@+id/pet_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pet_age"
                android:textAppearance="@style/info_input"
                android:fontFamily="@font/hanuman_regular"
                />

            <TextView
                android:id="@+id/pet_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="pet state"
                android:textAppearance="@style/info_input"
                android:fontFamily="@font/hanuman_regular"
                />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginVertical="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_yellow_border_rectangle"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>